<resources>
    <string name="app_name">messenger</string>
    <string name="avatar_image">This is avatar image</string>
    <string name="enter_your_nick">Enter your nickname</string>
    <string name="enter_your_pass">Enter your password</string>
    <string name="what_i_do">What I do</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="not_registered">Not registered?</string>
    <string name="main_page">Main Page</string>
    <string name="profile">Profile</string>
    <string name="update">Update</string>
    <string name="search">Search button</string>
    <string name="Search_txt">Search</string>
    <string name="hint_et_enter_message">Message</string>
    <string name="nickname">nickname</string>
    <string name="profession">profession</string>
    <string name="nickname2">Nickname</string>
    <string name="profession2">Profession</string>
</resources>