<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/log_in_avatar"
        android:layout_width="@dimen/avatar_width"
        android:layout_height="@dimen/avatar_height"
        android:contentDescription="@string/avatar_image"
        android:src="@drawable/avatar_image_placeholder"
        android:layout_marginBottom="@dimen/margin_48"
        app:layout_constraintBottom_toTopOf="@+id/nick_log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/nick_log_in"
        android:maxLength="45"
        android:layout_width="@dimen/editTextWidth"
        android:layout_height="@dimen/editTextHeight"
        android:background="@drawable/outline_style"
        android:gravity="center"
        android:hint="@string/enter_your_nick"
        android:inputType="textShortMessage"
        android:textColor="@color/dark_gray"
        android:textColorHint="@color/dark_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/password_log_in"
        android:layout_width="@dimen/editTextWidth"
        android:layout_height="@dimen/editTextHeight"
        android:layout_marginTop="@dimen/margin_16"

        android:background="@drawable/outline_style"
        android:hint="@string/enter_your_pass"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/dark_gray"
        android:textColorHint="@color/dark_gray"
        app:layout_constraintBottom_toTopOf="@id/sign_in_button"
        app:layout_constraintEnd_toEndOf="@+id/nick_log_in"
        app:layout_constraintStart_toStartOf="@+id/nick_log_in"
        app:layout_constraintTop_toBottomOf="@+id/nick_log_in"
        app:layout_constraintVertical_bias="0.5" />


    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/sign_in"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintEnd_toEndOf="@id/password_log_in"
        app:layout_constraintStart_toStartOf="@+id/nick_log_in"
        app:layout_constraintTop_toBottomOf="@+id/password_log_in"  />

    <TextView
        android:id="@+id/not_registered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_8"
        android:text="@string/not_registered"
        android:textColor="@color/gray"
        android:textSize="@dimen/font_16"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_Cl"
        app:layout_constraintEnd_toEndOf="@+id/sign_up_Cl"
        app:layout_constraintStart_toStartOf="@+id/sign_up_Cl" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_Cl"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginBottom="@dimen/margin_16"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/white"
        android:textColor="@color/gray"
        android:onClick="signUP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>